# CNC-project

./: .gitignore  AGENTS.md  CNC.code-workspace  LICENSE  README.md  VERIFICATION_GUIDE.md  env_setup.py  pyproject.toml
docs/: developer-guide.md  index.md  user-guide.md
drawing_data/xy/: REAL_gsc02_svg.yaml  SIM_svg_grid_circles.yaml  SIM_svg_sample.yaml
drawing_data/xyz/: REAL_grid_spheres.yaml  SIM_basic_gcode.yaml  SIM_gcode_cube.yaml  SIM_gcode_spiral.yaml  SIM_visual_fast.yaml  cube.gcode  single_sphere_step_sim.yaml  sphere_sample.stp  z_zero_start.yaml
examples/example_xy/: REAL_chuo_svg.yaml  SIM_svg_sample.yaml  SIM_svg_select.yaml
examples/example_xyz/: SIM_basic_gcode.yaml  SIM_step_multi_spheres.yaml  multi_spheres.stp  spiral.gcode
src/cnc_common/: __init__.py  gcode.py
src/cnc_common/jobs/: __init__.py  base.py
src/cnc_common/platform/: __init__.py  adapter.py
src/cnc_common/runtime/: __init__.py  config.py  jobs.py  visuals.py
src/common/: gcode.py
src/common/drivers/: __init__.py  driver_base.py
src/common/jobs/: README.md  __init__.py  base.py
src/common/platform/: README.md  __init__.py  adapter.py
src/common/runtime/: README.md  __init__.py  config.py  jobs.py  visuals.py
src/xy_runner/: gui_launcher.py  run_xy_runner.sh  xy_runner.py
src/xyz_runner/: __init__.py  gui_launcher.py  run_xyz_runner.sh  xyz_runner.py
